Release v1.2.0 — Java 17 target, API versioning, field lifecycle
- Downgrade toolchain from Java 21 to 17 for all library modules
  (annotations, processor, runtime, gradle-plugin)
- Replace @SupportedSourceVersion(RELEASE_21) with
  getSupportedSourceVersion() returning SourceVersion.latestSupported()
- Replace List.getFirst() (JDK 21) with get(0) in processor
- Add JDK 17 to CI matrix, fix artifact name collision across matrix legs
- Update sample project to use published plugin v1.2.0 with JDK 17 toolchain
- Update README and sample docs: Java 17+ requirement, 1.2.0 coordinates

New features since v1.1.1:
- Configurable endpoint versioning (api.basePath, api.major)
- Per-method version metadata (apiSince, apiDeprecatedSince, apiReplacement)
- Field-level version filtering (sinceVersion, deprecatedSinceVersion, removedInVersion)
- Runtime deprecation headers (RFC 9745) and Accept-Version negotiation
- Standalone sample project demonstrating the Gradle plugin DSL

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>